--- a/index.html
+++ b/index.html
@@ -5,40 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FTHP｜遊びの支援活動</title>
   <style>
+    :root {
+      --bg-main: #f7f9fc;
+      --bg-section: #ffffff;
+      --bg-soft: #f2f6fb;
+      --bg-accent: #eef5ff;
+      --text-main: #333;
+      --text-sub: #666;
+      --radius: 14px;
+    }
+
     body {
       margin: 0;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
                    "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
-      color: #333;
-      background: #f7f9fc;
+      color: var(--text-main);
+      background: var(--bg-main);
       line-height: 1.7;
     }
+
     img {
       max-width: 100%;
       height: auto;
       display: block;
     }
+
     .container {
-      max-width: 960px;
+      max-width: 920px;
       margin: 0 auto;
       padding: 0 16px;
     }
+
+    /* Hero */
     .hero {
       background: url("images/hero.jpg") center/cover no-repeat;
       color: #fff;
-      padding: 64px 16px 72px;
+      padding: 56px 0 64px;
     }
     .hero h1 {
-      font-size: 1.8rem;
-      margin-bottom: 12px;
+      font-size: 1.7rem;
+      margin: 0 0 10px;
+      line-height: 1.4;
     }
     .hero p {
       font-size: 1rem;
-      margin-bottom: 24px;
+      margin: 0 0 20px;
+      max-width: 520px;
     }
-    .hero .buttons a {
+    .buttons a {
       display: inline-block;
-      margin-right: 12px;
+      margin-right: 10px;
       padding: 10px 18px;
       border-radius: 999px;
       text-decoration: none;
@@ -53,51 +69,87 @@
       color: #fff;
     }
 
+    /* Sections */
     section {
-      padding: 48px 0;
-      background: #fff;
-      margin-bottom: 12px;
+      background: var(--bg-section);
+      padding: 40px 0;
     }
-    section h2 {
-      font-size: 1.4rem;
-      margin-bottom: 16px;
+    section + section {
+      margin-top: 12px;
     }
 
+    h2 {
+      font-size: 1.35rem;
+      margin: 0 0 14px;
+    }
+
+    p {
+      margin: 0 0 12px;
+      max-width: 640px;
+    }
+
+    /* Cards */
     .cards {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 16px;
-      margin-top: 24px;
+      gap: 14px;
+      margin-top: 20px;
     }
     .card {
-      background: #f2f6fb;
-      border-radius: 12px;
-      padding: 16px;
+      background: var(--bg-soft);
+      border-radius: var(--radius);
+      padding: 16px 14px 18px;
       text-align: center;
     }
     .card img {
-      margin: 0 auto 12px;
+      width: 120px;
+      margin: 0 auto 10px;
+    }
+    .card p {
+      margin: 0;
+      font-size: 0.95rem;
     }
 
+    /* Support blocks */
     .support {
       display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 24px;
+      grid-template-columns: 1.1fr 0.9fr;
+      gap: 20px;
       align-items: center;
+      padding: 22px;
+      background: var(--bg-soft);
+      border-radius: var(--radius);
     }
     .support + .support {
-      margin-top: 32px;
+      margin-top: 18px;
+    }
+    .support img {
+      max-width: 220px;
+      margin-left: auto;
     }
 
+    .note {
+      font-size: 0.85rem;
+      color: var(--text-sub);
+      margin-top: 6px;
+    }
+
+    /* CTA */
     .cta {
-      background: #eef5ff;
+      background: var(--bg-accent);
       text-align: center;
-      padding: 56px 16px;
+      padding: 44px 16px;
+      margin-top: 16px;
+    }
+    .cta h2 {
+      margin-bottom: 10px;
+    }
+    .cta p {
+      margin: 0 auto 14px;
     }
     .cta a {
       display: inline-block;
-      margin-top: 16px;
-      padding: 12px 24px;
+      padding: 12px 26px;
       background: #ffd84d;
       border-radius: 999px;
       text-decoration: none;
@@ -105,15 +157,20 @@
       font-weight: bold;
     }
 
+    /* Mobile */
     @media (max-width: 600px) {
       .hero {
-        padding: 48px 16px 56px;
+        padding: 44px 0 52px;
       }
       .hero h1 {
-        font-size: 1.5rem;
+        font-size: 1.45rem;
       }
       .support {
         grid-template-columns: 1fr;
+        text-align: left;
+      }
+      .support img {
+        margin: 12px auto 0;
       }
     }
   </style>
@@ -137,12 +194,12 @@
     <div class="container">
       <h2>私たちの活動について</h2>
       <p>
-        電池で動くおもちゃは、小さなスイッチの操作が難しく、<br>
+        電池で動くおもちゃは、小さなスイッチの操作が難しく、
         遊ぶことをあきらめてしまう子どもも少なくありません。
       </p>
       <p>
-        私たちは、外部スイッチの取り付けや、<br>
-        お子さまの身体の動きに合わせたスイッチ制作を通じて、<br>
+        私たちは、外部スイッチの取り付けや、
+        お子さまの身体の動きに合わせたスイッチ制作を通じて、
         <strong>「自分でおもちゃを動かして遊ぶ体験」</strong>を支援しています。
       </p>
     </div>
@@ -176,8 +233,8 @@
         <div>
           <h2>スイッチ制作・改造</h2>
           <p>
-            市販のおもちゃに外部スイッチを取り付けたり、<br>
-            お子さまの動きに合わせたスイッチを制作することで、<br>
+            市販のおもちゃに外部スイッチを取り付けたり、
+            お子さまの動きに合わせたスイッチを制作することで、
             操作しやすく、安心して遊べるようにします。
           </p>
         </div>
@@ -188,10 +245,10 @@
         <div>
           <h2>おもちゃの修理・改造</h2>
           <p>
-            壊れてしまったおもちゃや、遊びにくくなったおもちゃを、<br>
+            壊れてしまったおもちゃや、遊びにくくなったおもちゃを、
             状態を確認したうえで修理・改造します。
           </p>
-          <p style="font-size:0.9rem;color:#666;">
+          <p class="note">
             ※おもちゃの状態によっては、対応が難しい場合があります。
           </p>
         </div>
@@ -203,7 +260,10 @@
   <!-- CTA -->
   <div class="cta" id="contact">
     <h2>まずはお気軽にご相談ください</h2>
-    <p>おもちゃやスイッチについてのご質問・ご相談は、<br>問い合わせフォームより受け付けています。</p>
+    <p>
+      おもちゃやスイッチについてのご質問・ご相談は、
+      問い合わせフォームより受け付けています。
+    </p>
     <a href="#">お問い合わせはこちら</a>
   </div>
 
