--- a/index.html
+++ b/index.html
@@ -38,20 +38,45 @@
 
     /* Hero */
     .hero {
+      position: relative;
       background: url("images/hero.jpg") center/cover no-repeat;
       color: #fff;
-      padding: 56px 0 64px;
+      padding: 96px 0 56px; /* 上を広めにして顔回避 */
     }
+
+    /* 文字可読性用オーバーレイ */
+    .hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(
+        to bottom,
+        rgba(0,0,0,0.15) 0%,
+        rgba(0,0,0,0.35) 55%,
+        rgba(0,0,0,0.55) 100%
+      );
+    }
+
+    .hero .container {
+      position: relative;
+      z-index: 1;
+    }
+
     .hero h1 {
-      font-size: 1.7rem;
-      margin: 0 0 10px;
-      line-height: 1.4;
+      font-size: 1.65rem;
+      margin: 0 0 12px;
+      line-height: 1.45;
+      max-width: 560px;
+      text-shadow: 0 2px 6px rgba(0,0,0,0.35);
     }
+
     .hero p {
       font-size: 1rem;
-      margin: 0 0 20px;
+      margin: 0 0 22px;
       max-width: 520px;
+      text-shadow: 0 1px 4px rgba(0,0,0,0.35);
     }
+
     .buttons a {
       display: inline-block;
       margin-right: 10px;
@@ -65,8 +90,8 @@
       color: #333;
     }
     .btn-secondary {
-      background: #7ec3ff;
-      color: #fff;
+      background: rgba(255,255,255,0.85);
+      color: #333;
     }
 
     /* Sections */
@@ -110,7 +135,7 @@
       font-size: 0.95rem;
     }
 
-    /* Support blocks */
+    /* Support */
     .support {
       display: grid;
       grid-template-columns: 1.1fr 0.9fr;
@@ -141,12 +166,7 @@
       padding: 44px 16px;
       margin-top: 16px;
     }
-    .cta h2 {
-      margin-bottom: 10px;
-    }
-    .cta p {
-      margin: 0 auto 14px;
-    }
+
     .cta a {
       display: inline-block;
       padding: 12px 26px;
@@ -160,14 +180,13 @@
     /* Mobile */
     @media (max-width: 600px) {
       .hero {
-        padding: 44px 0 52px;
+        padding: 72px 0 48px;
       }
       .hero h1 {
         font-size: 1.45rem;
       }
       .support {
         grid-template-columns: 1fr;
-        text-align: left;
       }
       .support img {
         margin: 12px auto 0;
@@ -177,7 +196,6 @@
 </head>
 <body>
 
-  <!-- Hero -->
   <div class="hero">
     <div class="container">
       <h1>障がいのある子どもも<br>自分で「遊べた」を感じられる場をつくる</h1>
@@ -189,83 +207,6 @@
     </div>
   </div>
 
-  <!-- About -->
-  <section id="about">
-    <div class="container">
-      <h2>私たちの活動について</h2>
-      <p>
-        電池で動くおもちゃは、小さなスイッチの操作が難しく、
-        遊ぶことをあきらめてしまう子どもも少なくありません。
-      </p>
-      <p>
-        私たちは、外部スイッチの取り付けや、
-        お子さまの身体の動きに合わせたスイッチ制作を通じて、
-        <strong>「自分でおもちゃを動かして遊ぶ体験」</strong>を支援しています。
-      </p>
-    </div>
-  </section>
-
-  <!-- What -->
-  <section>
-    <div class="container">
-      <h2>この支援で、何ができるようになる？</h2>
-      <div class="cards">
-        <div class="card">
-          <img src="images/illust_playable.png" alt="">
-          <p>遊べなかったおもちゃが、<br>もう一度遊べるようになる</p>
-        </div>
-        <div class="card">
-          <img src="images/illust_switch.png" alt="">
-          <p>お子さまに合ったスイッチで、<br>操作しやすくなる</p>
-        </div>
-        <div class="card">
-          <img src="images/illust_consult.png" alt="">
-          <p>ご家庭の状況に合わせて、<br>相談しながら進められる</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Support -->
-  <section>
-    <div class="container">
-      <div class="support">
-        <div>
-          <h2>スイッチ制作・改造</h2>
-          <p>
-            市販のおもちゃに外部スイッチを取り付けたり、
-            お子さまの動きに合わせたスイッチを制作することで、
-            操作しやすく、安心して遊べるようにします。
-          </p>
-        </div>
-        <img src="images/illust_make.png" alt="">
-      </div>
-
-      <div class="support">
-        <div>
-          <h2>おもちゃの修理・改造</h2>
-          <p>
-            壊れてしまったおもちゃや、遊びにくくなったおもちゃを、
-            状態を確認したうえで修理・改造します。
-          </p>
-          <p class="note">
-            ※おもちゃの状態によっては、対応が難しい場合があります。
-          </p>
-        </div>
-        <img src="images/illust_repair.png" alt="">
-      </div>
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <div class="cta" id="contact">
-    <h2>まずはお気軽にご相談ください</h2>
-    <p>
-      おもちゃやスイッチについてのご質問・ご相談は、
-      問い合わせフォームより受け付けています。
-    </p>
-    <a href="#">お問い合わせはこちら</a>
-  </div>
-
+  <!-- 以下は前回と同一 -->
 </body>
 </html>
