--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FTHP｜遊びの支援活動</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>スイッチで広がる あそびの世界</title>
   <style>
     body {
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-        "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Hiragino Kaku Gothic ProN",
+                   "Hiragino Sans", "Noto Sans JP", Meiryo, sans-serif;
+      line-height: 1.8;
       color: #333;
-      background: #f7f9fc;
-      line-height: 1.75;
+      background: #fff;
+    }
+
+    a {
+      color: #0066aa;
+      text-decoration: underline;
     }
 
     img {
@@ -21,284 +25,200 @@
       display: block;
     }
 
-    a {
-      color: #1a73e8;
-      text-decoration: none;
+    header.hero {
+      background: #f3f7fa;
     }
-    a:hover {
-      text-decoration: underline;
+
+    .hero-inner {
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 48px 16px 56px;
+      text-align: center;
+    }
+
+    .hero-inner img {
+      border-radius: 12px;
+      margin-bottom: 24px;
+    }
+
+    .hero h1 {
+      font-size: 1.8rem;
+      margin-bottom: 16px;
+    }
+
+    section {
+      padding: 40px 16px;
     }
 
     .container {
       max-width: 960px;
       margin: 0 auto;
-      padding: 0 16px;
     }
 
-    /* Hero */
-    .hero {
-      position: relative;
-      background: url("images/hero.jpg") center top / cover no-repeat;
-      color: #fff;
-    }
-    .hero::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.35);
-    }
-    .hero-inner {
-      position: relative;
-      padding: 72px 0 80px;
-    }
-    .hero h1 {
-      font-size: 1.9rem;
-      margin-bottom: 16px;
-    }
-    .hero p {
-      font-size: 1.05rem;
-      max-width: 640px;
-    }
-
-    /* Section */
-    section {
-      background: #fff;
-      padding: 56px 0;
-      margin-bottom: 12px;
-    }
-    section h2 {
-      font-size: 1.45rem;
-      margin-bottom: 20px;
-    }
-    section p {
+    h2 {
+      font-size: 1.5rem;
       margin-bottom: 16px;
     }
 
-    /* Cards */
-    .cards {
+    .block {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 32px;
+      grid-template-columns: 1fr 220px;
+      gap: 24px;
+      align-items: start;
     }
-    .card {
-      background: #f2f6fb;
-      border-radius: 14px;
-      padding: 20px;
+
+    .block + .block {
+      margin-top: 40px;
+    }
+
+    .block img {
+      border-radius: 8px;
+    }
+
+    .link-box {
+      margin-top: 12px;
+    }
+
+    footer {
+      background: #f3f3f3;
+      padding: 24px 16px;
       text-align: center;
-    }
-    .card img {
-      margin: 0 auto 14px;
-    }
-
-    /* Support */
-    .support {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 32px;
-      align-items: center;
-    }
-    .support + .support {
-      margin-top: 48px;
-    }
-
-    .note {
       font-size: 0.9rem;
-      color: #666;
-    }
-
-    /* CTA */
-    .cta {
-      background: #eef5ff;
-      padding: 64px 16px;
-      text-align: center;
-    }
-    .cta h2 {
-      margin-bottom: 16px;
-    }
-    .cta a {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 12px 28px;
-      background: #ffd84d;
-      border-radius: 999px;
-      font-weight: bold;
-      color: #333;
     }
 
     @media (max-width: 640px) {
-      .hero-inner {
-        padding: 56px 0 64px;
-      }
-      .hero h1 {
-        font-size: 1.6rem;
-      }
-      .support {
+      .block {
         grid-template-columns: 1fr;
       }
     }
   </style>
 </head>
-
 <body>
 
-  <!-- Hero -->
-  <div class="hero">
-    <div class="container hero-inner">
-      <h1>
-        障がいのある子どもも<br>
-        自分で「遊べた」を感じられる場をつくる
-      </h1>
-      <p>
-        FTHPは、おもちゃの改造やスイッチ制作を通じて、<br>
-        「操作できないから遊べない」を減らすための遊びの支援活動を行っています。
-      </p>
-    </div>
-  </div>
-
-  <!-- About -->
-  <section>
-    <div class="container">
-      <h2>私たちの活動について</h2>
-      <p>
-        電池で動くおもちゃの多くは、小さなボタンやスイッチ操作が必要です。<br>
-        そのため、身体の動きに制限がある子どもにとっては、
-        「本当は興味があるのに遊べない」という状況が生まれがちです。
-      </p>
-      <p>
-        FTHPでは、市販のおもちゃに外部スイッチを取り付けたり、
-        お子さまの動きに合わせたスイッチを制作することで、
-        <strong>自分の力でおもちゃを動かして遊ぶ体験</strong>を支援しています。
-      </p>
-    </div>
-  </section>
-
-  <!-- What -->
-  <section>
-    <div class="container">
-      <h2>この支援でできるようになること</h2>
-
-      <div class="cards">
-        <div class="card">
-          <img src="images/illust_playable.jpg" alt="">
-          <p>
-            今まで遊べなかったおもちゃが、<br>
-            工夫によって再び遊べるようになります。
-          </p>
-        </div>
-
-        <div class="card">
-          <img src="images/illust_multi_switch.jpg" alt="">
-          <p>
-            複数のスイッチを使い分けることで、<br>
-            お子さまに合った操作方法を試せます。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/switch">▶ スイッチのサンプルを見る</a>
-          </p>
-        </div>
-
-        <div class="card">
-          <img src="images/illust_consult.jpg" alt="">
-          <p>
-            ご家庭の状況やお子さまの様子に合わせて、<br>
-            相談しながら進めることができます。
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Support -->
-  <section>
-    <div class="container">
-
-      <div class="support">
-        <div>
-          <h2>スイッチ制作・おもちゃ改造</h2>
-          <p>
-            市販のおもちゃに外部スイッチを取り付けたり、
-            お子さまの身体の動きに合わせたスイッチを制作します。
-          </p>
-          <p>
-            動かしやすさだけでなく、安全性にも配慮し、
-            ご家庭で安心して使える形を一緒に考えます。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/toy">▶ 改造・制作の詳細を見る</a>
-          </p>
-        </div>
-        <img src="images/illust_make.jpg" alt="">
-      </div>
-
-      <div class="support">
-        <div>
-          <h2>貸し出しおもちゃ</h2>
-          <p>
-            スイッチ付きおもちゃを一定期間お貸しし、
-            実際にご家庭で試していただくことができます。
-          </p>
-          <p>
-            「どんなスイッチが合うのか分からない」
-            「まずは反応を見てみたい」
-            という場合に活用されています。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/rental">▶ 貸し出しおもちゃについて</a>
-          </p>
-        </div>
-        <img src="images/illust_rental.jpg" alt="">
-      </div>
-
-      <div class="support">
-        <div>
-          <h2>おもちゃの修理・おもちゃ病院</h2>
-          <p>
-            壊れてしまったおもちゃや、使いづらくなったおもちゃについても、
-            状態を確認したうえで修理や改造を行います。
-          </p>
-          <p>
-            地域のおもちゃ病院とも連携しながら対応しています。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/omochabyoin">
-              ▶ おもちゃ病院の紹介
-            </a>
-          </p>
-          <p class="note">
-            ※おもちゃの状態によっては対応が難しい場合があります。
-          </p>
-        </div>
-        <img src="images/illust_repair.jpg" alt="">
-      </div>
-
-      <div class="support">
-        <div>
-          <h2>メディア掲載</h2>
-          <p>
-            FTHPの活動は、新聞などのメディアでも紹介されています。
-          </p>
-          <p>
-            <a href="https://sites.google.com/view/fthp/media">
-              ▶ 新聞・メディア掲載を見る
-            </a>
-          </p>
-        </div>
-        <img src="images/illust_media.jpg" alt="">
-      </div>
-
-    </div>
-  </section>
-
-  <!-- CTA -->
-  <div class="cta">
-    <h2>まずはお気軽にご相談ください</h2>
+<header class="hero">
+  <div class="hero-inner">
+    <img src="images/hero.jpg" alt="スイッチで遊ぶ子ども">
+    <h1>スイッチで、あそびはもっと広がる</h1>
     <p>
-      おもちゃやスイッチについてのご質問・ご相談は、<br>
-      問い合わせフォームより受け付けています。
+      手や体を思うように動かせなくても、<br>
+      スイッチがあれば「自分で遊ぶ」体験をつくることができます。
     </p>
-    <a href="https://sites.google.com/view/fthp/contact">お問い合わせはこちら</a>
   </div>
+</header>
+
+<section>
+  <div class="container">
+    <h2>できなかった「あそび」を、できるように</h2>
+    <div class="block">
+      <div>
+        <p>
+          市販のおもちゃは、押す・つまむ・すばやく操作することを前提に作られています。  
+          そのため、肢体不自由や発達特性のあるお子さんにとっては、
+          「遊びたいのに遊べない」ものになってしまうことがあります。
+        </p>
+        <p>
+          スイッチを使うことで、  
+          <strong>ほんの少しの動きや力</strong>をきっかけに、
+          音が鳴る・光る・動くといった反応を引き出すことができます。
+        </p>
+      </div>
+      <img src="images/illust_playable.jpg" alt="">
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h2>複数スイッチ対応のおもちゃ</h2>
+    <div class="block">
+      <div>
+        <p>
+          1つのスイッチだけでなく、  
+          複数のスイッチを使って操作できるおもちゃもあります。
+        </p>
+        <p>
+          たとえば、  
+          「押すと音が鳴る」「別のスイッチで止まる」など、
+          原因と結果の関係を感じやすい構成にすることで、
+          遊びの幅が大きく広がります。
+        </p>
+        <div class="link-box">
+          <a href="https://sites.google.com/view/fthp/rental">▶ スイッチ付きおもちゃのサンプルを見る</a>
+        </div>
+      </div>
+      <img src="images/illust_multi_switch.jpg" alt="">
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h2>おもちゃの貸し出し</h2>
+    <div class="block">
+      <div>
+        <p>
+          実際に使ってみないと、  
+          お子さんに合うかどうかは分からないことがほとんどです。
+        </p>
+        <p>
+          そのため、スイッチ対応のおもちゃを
+          一定期間ご自宅で試していただける貸し出しを行っています。
+        </p>
+        <div class="link-box">
+          <a href="https://sites.google.com/view/fthp/toy">▶ 貸し出しおもちゃ一覧</a>
+        </div>
+      </div>
+      <img src="images/illust_rental.jpg" alt="">
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h2>おもちゃ病院・修理</h2>
+    <div class="block">
+      <div>
+        <p>
+          動かなくなったおもちゃの修理や、
+          スイッチをつなぐための改造相談も受け付けています。
+        </p>
+        <p>
+          市販品をそのまま使うのが難しい場合でも、
+          少しの工夫で遊べるようになることがあります。
+        </p>
+        <div class="link-box">
+          <a href="https://sites.google.com/view/fthp/repair">▶ おもちゃ病院について</a>
+        </div>
+      </div>
+      <img src="images/illust_repair.jpg" alt="">
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h2>メディア掲載・紹介</h2>
+    <div class="block">
+      <div>
+        <p>
+          活動内容は、新聞や地域メディアなどでも紹介されています。
+        </p>
+        <p>
+          スイッチを通じて広がる「あそび」の可能性について、
+          取材・掲載実績があります。
+        </p>
+        <div class="link-box">
+          <a href="https://sites.google.com/view/fthp/media">▶ 新聞・メディア掲載一覧</a>
+        </div>
+      </div>
+      <img src="images/illust_media.jpg" alt="">
+    </div>
+  </div>
+</section>
+
+<footer>
+  © スイッチで広がる あそびの世界
+</footer>
 
 </body>
 </html>
