--- a/index.html
+++ b/index.html
@@ -1,210 +1,304 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>活動紹介サイト</title>
-<style>
-  body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Hiragino Kaku Gothic ProN", "Noto Sans JP", sans-serif;
-    color: #333;
-    line-height: 1.7;
-    background: #f7f9fc;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>FTHP｜遊びの支援活動</title>
 
-  img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-  }
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+        "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+      color: #333;
+      background: #f7f9fc;
+      line-height: 1.75;
+    }
 
-  a {
-    color: #2b6cb0;
-    text-decoration: none;
-    font-weight: 500;
-  }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+    }
 
-  a:hover {
-    text-decoration: underline;
-  }
+    a {
+      color: #1a73e8;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
 
-  /* ---------- Hero ---------- */
-  .hero {
-    position: relative;
-  }
+    .container {
+      max-width: 960px;
+      margin: 0 auto;
+      padding: 0 16px;
+    }
 
-  .hero img {
-    width: 100%;
-    max-height: 360px;
-    object-fit: cover;
-  }
+    /* Hero */
+    .hero {
+      position: relative;
+      background: url("images/hero.jpg") center center / cover no-repeat;
+      color: #fff;
+    }
+    .hero::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.35);
+    }
+    .hero-inner {
+      position: relative;
+      padding: 48px 0 56px;
+    }
+    .hero h1 {
+      font-size: 1.9rem;
+      margin-bottom: 16px;
+    }
+    .hero p {
+      font-size: 1.05rem;
+      max-width: 640px;
+    }
 
-  .hero-text {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    right: 20px;
-    background: rgba(255,255,255,0.85);
-    padding: 16px 18px;
-    border-radius: 12px;
-  }
+    /* Section */
+    section {
+      background: #fff;
+      padding: 40px 0;
+      margin-bottom: 12px;
+    }
+    section h2 {
+      font-size: 1.45rem;
+      margin-bottom: 20px;
+    }
+    section p {
+      margin-bottom: 16px;
+    }
 
-  .hero-text h1 {
-    margin: 0 0 6px 0;
-    font-size: 1.25rem;
-  }
+    /* Cards */
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 28px;
+    }
+    .card {
+      background: #f2f6fb;
+      border-radius: 14px;
+      padding: 20px;
+      text-align: center;
+    }
+    .card img {
+      margin: 0 auto 14px;
+    }
 
-  .hero-text p {
-    margin: 0;
-    font-size: 0.95rem;
-  }
+    /* Support */
+    .support {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 32px;
+      align-items: center;
+    }
+    .support + .support {
+      margin-top: 36px;
+    }
 
-  /* ---------- Section ---------- */
-  .container {
-    padding: 24px 16px;
-    max-width: 820px;
-    margin: auto;
-  }
+    .note {
+      font-size: 0.9rem;
+      color: #666;
+    }
 
-  section {
-    margin-bottom: 32px;
-  }
+    /* CTA */
+    .cta {
+      background: #eef5ff;
+      padding: 56px 16px;
+      text-align: center;
+    }
+    .cta h2 {
+      margin-bottom: 16px;
+    }
+    .cta a {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 12px 28px;
+      background: #ffd84d;
+      border-radius: 999px;
+      font-weight: bold;
+      color: #333;
+    }
 
-  section h2 {
-    font-size: 1.15rem;
-    margin-bottom: 10px;
-  }
-
-  section p {
-    margin: 0 0 10px 0;
-  }
-
-  .link {
-    margin-top: 4px;
-  }
-
-  /* ---------- Card ---------- */
-  .card {
-    background: #fff;
-    border-radius: 14px;
-    padding: 16px;
-    box-shadow: 0 6px 16px rgba(0,0,0,0.05);
-  }
-
-  .card img {
-    margin-bottom: 12px;
-    border-radius: 10px;
-  }
-
-  /* ---------- CTA ---------- */
-  .cta {
-    text-align: center;
-    background: #fff;
-    padding: 28px 16px;
-    border-radius: 16px;
-    box-shadow: 0 6px 16px rgba(0,0,0,0.05);
-  }
-
-  .cta a {
-    display: inline-block;
-    margin-top: 12px;
-    padding: 10px 22px;
-    background: #f6c453;
-    color: #000;
-    border-radius: 24px;
-    font-weight: 600;
-  }
-</style>
+    @media (max-width: 640px) {
+      .hero-inner {
+        padding: 40px 0 48px;
+      }
+      .hero h1 {
+        font-size: 1.6rem;
+      }
+      .support {
+        grid-template-columns: 1fr;
+      }
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- Hero -->
-<div class="hero">
-  <img src="images/hero.jpg" alt="活動の様子">
-  <div class="hero-text">
-    <h1>障がいのある子どもも、自分で「できた」と感じられる環境をつくる</h1>
-    <p>スイッチ支援・おもちゃ改造・貸し出しを通じた取り組み</p>
+  <!-- Hero -->
+  <div class="hero">
+    <div class="container hero-inner">
+      <h1>
+        障がいのある子どもも<br>
+        自分で「遊べた」を感じられる場をつくる
+      </h1>
+      <p>
+        FTHPは、おもちゃの改造やスイッチ制作を通じて、<br>
+        「操作できないから遊べない」を減らすための遊びの支援活動を行っています。
+      </p>
+    </div>
   </div>
-</div>
 
-<div class="container">
+  <!-- About -->
+  <section>
+    <div class="container">
+      <h2>私たちの活動について</h2>
+      <p>
+        電池で動くおもちゃの多くは、小さなボタンやスイッチの操作が必要です。<br>
+        そのため、身体の動きに制限がある子どもにとっては、
+        「本当は興味があるのに遊べない」という状況が生まれがちです。
+      </p>
+      <p>
+        FTHPでは、市販のおもちゃに外部スイッチを取り付けたり、
+        お子さまの動きに合わせたスイッチを制作することで、
+        <strong>自分の力でおもちゃを動かして遊ぶ体験</strong>を支援しています。
+      </p>
+    </div>
+  </section>
 
-<!-- About -->
-<section>
-  <h2>私たちの活動について</h2>
-  <p>
-    障がいのある子どもたちが、「自分で操作できた」「自分で遊べた」と感じられる経験は、
-    日々の生活や学びへの意欲につながります。
-  </p>
-  <p>
-    私たちは、スイッチを使った支援機器やおもちゃの改造、貸し出しを通じて、
-    子ども一人ひとりの身体状況や成長段階に合った環境づくりを行っています。
-  </p>
-</section>
+  <!-- What -->
+  <section>
+    <div class="container">
+      <h2>この支援でできるようになること</h2>
 
-<!-- Switch -->
-<section class="card">
-  <img src="images/switch_toy.jpg" alt="スイッチ付きおもちゃ">
-  <h2>スイッチ制作・おもちゃ改造</h2>
-  <p>
-    市販のおもちゃにスイッチを取り付け、少しの力や動きで操作できるように改造します。
-    複数のスイッチを使い分けることで、遊びの幅が広がります。
-  </p>
-  <div class="link">
-    ▶ <a href="https://example.com/switch">スイッチ支援の詳細はこちら</a>
+      <div class="cards">
+        <div class="card">
+          <img src="images/illust_playable.png" alt="">
+          <p>
+            今まで遊べなかったおもちゃが、<br>
+            工夫によって再び遊べるようになります。
+          </p>
+        </div>
+
+        <div class="card">
+          <img src="images/illust_multi_switch.png" alt="">
+          <p>
+            複数のスイッチを使い分けることで、<br>
+            お子さまに合った操作方法を試せます。
+          </p>
+          <p>
+            <a href="https://sites.google.com/view/fthp/switch">▶ スイッチのサンプルを見る</a>
+          </p>
+        </div>
+
+        <div class="card">
+          <img src="images/illust_consult.png" alt="">
+          <p>
+            ご家庭の状況やお子さまの様子に合わせて、<br>
+            相談しながら進めることができます。
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Support -->
+  <section>
+    <div class="container">
+
+      <div class="support">
+        <div>
+          <h2>スイッチ制作・おもちゃ改造</h2>
+          <p>
+            市販のおもちゃに外部スイッチを取り付けたり、
+            お子さまの身体の動きに合わせたスイッチを制作します。
+          </p>
+          <p>
+            動かしやすさだけでなく、安全性にも配慮し、
+            ご家庭で安心して使える形を一緒に考えます。
+          </p>
+          <p>
+            <a href="https://sites.google.com/view/fthp/toy">▶ 改造・制作の詳細を見る</a>
+          </p>
+        </div>
+        <img src="images/illust_make.png" alt="">
+      </div>
+
+      <div class="support">
+        <div>
+          <h2>貸し出しおもちゃ</h2>
+          <p>
+            スイッチ付きおもちゃを一定期間お貸しし、
+            実際にご家庭で試していただくことができます。
+          </p>
+          <p>
+            「どんなスイッチが合うのか分からない」
+            「まずは反応を見てみたい」
+            という場合に活用されています。
+          </p>
+          <p>
+            <a href="https://sites.google.com/view/fthp/rental">▶ 貸し出しおもちゃについて</a>
+          </p>
+        </div>
+        <img src="images/illust_rental.png" alt="">
+      </div>
+
+      <div class="support">
+        <div>
+          <h2>おもちゃの修理・おもちゃ病院</h2>
+          <p>
+            壊れてしまったおもちゃや、使いづらくなったおもちゃについても、
+            状態を確認したうえで修理や改造を行います。
+          </p>
+          <p>
+            地域のおもちゃ病院とも連携しながら対応しています。
+          </p>
+          <p>
+            <a href="https://sites.google.com/view/fthp/omochabyoin">
+              ▶ おもちゃ病院の紹介
+            </a>
+          </p>
+          <p class="note">
+            ※おもちゃの状態によっては対応が難しい場合があります。
+          </p>
+        </div>
+        <img src="images/illust_repair.png" alt="">
+      </div>
+
+      <div class="support">
+        <div>
+          <h2>メディア掲載</h2>
+          <p>
+            FTHPの活動は、新聞などのメディアでも紹介されています。
+          </p>
+          <p>
+            <a href="https://sites.google.com/view/fthp/media">
+              ▶ 新聞・メディア掲載を見る
+            </a>
+          </p>
+        </div>
+        <img src="images/illust_media.png" alt="">
+      </div>
+
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <div class="cta">
+    <h2>まずはお気軽にご相談ください</h2>
+    <p>
+      おもちゃやスイッチについてのご質問・ご相談は、<br>
+      問い合わせフォームより受け付けています。
+    </p>
+    <a href="https://sites.google.com/view/fthp/contact">お問い合わせはこちら</a>
   </div>
-</section>
 
-<!-- Rental -->
-<section class="card">
-  <img src="images/toy_rental.jpg" alt="おもちゃ貸し出し">
-  <h2>貸し出しおもちゃ</h2>
-  <p>
-    実際に使ってみないと分からないことも多いため、スイッチ対応おもちゃの貸し出しを行っています。
-    家庭や施設で試しながら、最適な方法を一緒に探します。
-  </p>
-  <div class="link">
-    ▶ <a href="https://example.com/rental">貸し出しについて詳しく見る</a>
-  </div>
-</section>
-
-<!-- Toy Hospital -->
-<section class="card">
-  <img src="images/toy_hospital.jpg" alt="おもちゃ病院">
-  <h2>おもちゃの修理・おもちゃ病院</h2>
-  <p>
-    動かなくなったおもちゃや、スイッチ調整が必要なおもちゃの修理も行っています。
-    子どもにとって大切な「いつものおもちゃ」を長く使えるよう支援します。
-  </p>
-  <div class="link">
-    ▶ <a href="https://example.com/toyhospital">おもちゃ病院の紹介</a>
-  </div>
-</section>
-
-<!-- Media -->
-<section class="card">
-  <img src="images/media.jpg" alt="メディア掲載">
-  <h2>メディア掲載</h2>
-  <p>
-    新聞や地域メディアにて、活動の様子を紹介していただいています。
-  </p>
-  <div class="link">
-    ▶ <a href="https://example.com/media">掲載記事を見る</a>
-  </div>
-</section>
-
-<!-- CTA -->
-<section class="cta">
-  <h2>まずはお気軽にご相談ください</h2>
-  <p>
-    「どんなスイッチが合うか分からない」「まずは試してみたい」
-    といった段階でも問題ありません。
-  </p>
-  <a href="https://example.com/contact">お問い合わせはこちら</a>
-</section>
-
-</div>
 </body>
 </html>
